All copy & images inserted.  CSS styling for 30%

--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <head>
   <title>  Chocolate Pizza  </title>
-  <link rel="stylesheet" href="css/reset.css" />
+  <!-- <link rel="stylesheet" href="css/reset.css" />  -->
+  <link href=“https://fonts.googleapis.com/css?family=Oswald:700” rel=“stylesheet”>
   <link rel="stylesheet" href="css/style.css" />
+  <!-- <link href=“https://fonts.googleapis.com/css?family=Yellowtail” rel=“stylesheet”> -->
+  <!-- <style> 
+      @import url(’https://fonts.googleapis.com/css?family=Yellowtail'); </style>  --> 
+    
 </head>
 
-
+<body>
   <header>
     <nav>
       <img src="img/logo.png" />
-      <text class="Delicious"> Delicious </text>
-      <text class="Food-Blog"> THE BEST FOOD BLOG ON THE WEB </text>
+      <p class="Delicious"> Delicious </p>
+      <p class="Food-Blog"> THE BEST FOOD BLOG ON THE WEB </p>
 
 
       <img src="img/fb-icon.png" class="social-icon" />
@@ -26,16 +31,16 @@
 
     <div class="greyline"> </div>
   </header>
-<body>
+
   <h1> Chocolate Pizza   </h1>
 
   <div class="Posted on"> <p> Posted on 15 DEC 2013 / DESSERTS
       <img src="img/print-icon.png" />
-      <text> PRINT </text>
+      <p class="Print"> PRINT </p>
     </p>
     </div>
 
-  <img src="img/choco-pizza.png" />
+  <img src="img/choco-pizza.png" class="Pizza-Pic"/>
 
   <section class="instructions">
 
@@ -79,8 +84,8 @@
 
   <section id="Vanessa"> 
     <img src="img/van-pic.png" />
-      <text class="Vanessa-Stevenson"> Vanessa Stevenson </text>    <!-- make this bold in CSS  -->
-      <text class="Vanessa-deets">  Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am. </text>
+      <p class="Vanessa-Stevenson"> Vanessa Stevenson </p>    <!-- make this bold in CSS  -->
+      <p class="Vanessa-deets">  Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am. </p>
 
       <button>
         SHARE RECIPE
@@ -90,15 +95,15 @@
   </section>
 
   <footer>
-      <div class="greyline2"> </div>
-      <img src="img/small-logo.png" />
-      <div class="greyline2"> </div>
-      <text> Delicious &copy; 2013 &middot; All Rights Reserved.     </text>
+
+    <div class="greyline2"> </div>
+        <img src="img/small-logo.png" />
+    <div class="greyline2"> </div>
+
+      <p> class="Copyright"> Delicious &copy; 2013 &middot; All Rights Reserved.     </p>
       <!-- \00B7 in CSS  -->
-      <text> Proudly published with Ghost. </text>
+      <p> class="Credits"> Proudly published with Ghost. </p>
       
-
-
   </footer>
 </body>
 
