Got the footer center aligned

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
         <img src="img/small-logo.png" />
     <div class="greyline2"> </div>
 
-      <p> class="Copyright"> Delicious &copy; 2013 &middot; All Rights Reserved.     </p>
+      <p class="Copyright"> Delicious &copy; 2013 &middot; All Rights Reserved.     </p>
       <!-- \00B7 in CSS  -->
-      <p> class="Credits"> Proudly published with Ghost. </p>
+      <p class="Credits"> Proudly published with Ghost. </p>
       
   </footer>
 </body>
